--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,12 @@
       type="image/x-icon"
       href="favicon.ico"
     />
+    <link
+      id="app-theme"
+      rel="stylesheet"
+      type="text/css"
+      href="light-theme.css"
+    />
   </head>
   <body>
     <app-root></app-root>
